# macroterm

./: CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.github/: CODEOWNERS
src/macroterm/: __main__.py  app.py  app.tcss  logger.py
src/macroterm/data/: bls.py  cache.py  finnhub.py  format.py  fred.py  rss.py  search.py  watchlist.py
src/macroterm/screens/: alerts.py  calendar.py  compare.py  detail.py  explorer.py  feed_detail.py  feeds.py  watchlist.py
